Improve style of column splitters

--- a/theme/userchrome.css
+++ b/theme/userchrome.css
@@ -172,8 +172,8 @@ a[Title="Tags"] + div > span {
 .rli-sideBarColumn > span > div,
 .rli-noteListColumn > span > div,
 .rli-pluginColumn > span > div {
-  right: -2px !important;
-  width: 4px !important;
+  right: -3px !important;
+  width: 6px !important;
   z-index: 100 !important;
 }
 .rli-sideBarColumn > span > div:hover,
@@ -182,7 +182,13 @@ a[Title="Tags"] + div > span {
 .rli-noteListColumn > span > div:active,
 .rli-pluginColumn > span > div:hover,
 .rli-pluginColumn > span > div:active {
-  background: var(--overlay-dark5);
+  background: var(--primary);
+  opacity: 0.8;
+}
+.rli-sideBarColumn > span > div:hover,
+.rli-noteListColumn > span > div:hover,
+.rli-pluginColumn > span > div:hover {
+  opacity: 0.5;
 }
 
 /* date picker */
