--- a/theme/userchrome.css
+++ b/theme/userchrome.css
@@ -49,7 +49,7 @@ i.icon-notes {
 } */
 
 /* TWEAK: Show/hide "last changed" timestamp next to the note title */
-.rli-editor > div > div > div > input + span {
+.rli-editor > div > div > div > div > input + span {
   display: none !important;
 }
 
@@ -59,7 +59,7 @@ i.icon-notes {
 }
 
 /* TWEAK: Show/hide editor toolbar (not in WYSIWYG editor mode and also not the toolbar next to the note title) */
-/* .rli-editor > div > div > div > div > div > div.editor-toolbar {
+/* .rli-editor > div > div > div > div > div > div > div.editor-toolbar {
   display: none !important;
 } */
 
@@ -162,40 +162,6 @@ a[Title="Tags"] + div > span {
   opacity: 0.4 !important;
 }
 
-/* scrollbars */
-::-webkit-scrollbar-thumb {
-  background-color: var(--overlay-dark1) !important;
-  border-radius: var(--scroll-radius) !important;
-}
-
-/* highlight splitters while dragging */
-.rli-sideBarColumn,
-.rli-noteListColumn,
-.rli-pluginColumn {
-  padding-right: 0 !important;
-}
-.rli-sideBarColumn > span > div,
-.rli-noteListColumn > span > div,
-.rli-pluginColumn > span > div {
-  right: -3px !important;
-  width: 6px !important;
-  z-index: 100 !important;
-}
-.rli-sideBarColumn > span > div:hover,
-.rli-sideBarColumn > span > div:active,
-.rli-noteListColumn > span > div:hover,
-.rli-noteListColumn > span > div:active,
-.rli-pluginColumn > span > div:hover,
-.rli-pluginColumn > span > div:active {
-  background: var(--primary);
-  opacity: 0.8;
-}
-.rli-sideBarColumn > span > div:hover,
-.rli-noteListColumn > span > div:hover,
-.rli-pluginColumn > span > div:hover {
-  opacity: 0.5;
-}
-
 /* date picker */
 .rdtPicker {
   border-radius: var(--dialog-radius) !important;
@@ -205,6 +171,39 @@ a[Title="Tags"] + div > span {
 } */
 /* .rdtPicker td.rdtDay:hover {
 } */
+
+/**************************************************************************************************
+ *  PANELS
+ *************************************************************************************************/
+
+/* general panels style */
+.resizableLayoutItem > div {
+  /* border-bottom: var(--default-border); */
+  min-width: 150px !important;
+  width: 100%;
+}
+.resizableLayoutItem > div > div {
+  height: 100%;
+}
+
+/* highlight splitters (vertical and horizontal) while dragging */
+.resizableLayoutItem > span > div {
+  z-index: 100 !important;
+}
+.resizableLayoutItem > span > div:hover,
+.resizableLayoutItem > span > div:active {
+  background: var(--primary);
+  opacity: 0.8;
+}
+.resizableLayoutItem > span > div:hover {
+  opacity: 0.5;
+}
+
+/* scrollbars */
+::-webkit-scrollbar-thumb {
+  background-color: var(--overlay-dark1) !important;
+  border-radius: var(--scroll-radius) !important;
+}
 
 /**************************************************************************************************
  *  SIDEBAR
@@ -241,86 +240,89 @@ a[Title="Tags"] + div > span {
  *************************************************************************************************/
 
 /* global search */
-.rli-noteListControls {
+div[height="50"] {
   height: auto !important;
 }
-.rli-noteListControls input {
+div[height="50"] input {
   border: none !important;
 }
 
 /* icon search */
-.rli-noteListControls > div > div:first-of-type button span {
+div[height="50"] span[class$="icon-search"] {
   color: var(--icons) !important;
 }
 
 /* note list */
-.rli-noteList > div {
+.rli-noteList div {
   /* remove border-right - introduced in 1.3.7 */
   border-right: none !important;
+}
+.rli-noteList > div > div {
+  width: 100%;
+}
+.item-list.note-list {
+  width: 100% !important;
 }
 
 /* note list entries */
 .rli-noteList > div > div:not(.note-list),
-.note-list > div:first-of-type {
+.rli-noteList > div > div > div:last-of-type:not(.note-list) > div {
   background: none !important;
   text-align: center !important;
-  /* TWEAK: enable to get a border above the first entry (also for empty folders) */
-  /* border-top: var(--default-border) !important;
-  margin: 0 12px !important; */
 }
-.note-list .list-item-container {
-  margin: 0 12px !important;
+.item-list.note-list .list-item-container {
+  margin: 0 10px !important;
   width: auto !important;
 }
-.note-list .list-item-container::before {
+.item-list.note-list .list-item-container::before {
   border-color: var(--overlay-dark1) !important;
   left: 0 !important;
   width: 100% !important;
 }
-.note-list .list-item-container > a {
+.item-list.note-list .list-item-container > a {
   padding: 0 3px !important;
 }
-.note-list .list-item-container > div {
+.item-list.note-list .list-item-container > div {
   padding-left: 3px !important;
 }
-.note-list .list-item-container:hover {
+.item-list.note-list .list-item-container:hover {
   background-color: var(--overlay-dark1) !important;
 }
-.note-list .list-item-container > a > span {
+.item-list.note-list .list-item-container > a > span {
   /* adds "..." to notes with long titles */
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 /* floating new note button */
-.rli-noteListControls > div > div:nth-child(2) {
+div[height="50"] > div:nth-child(2) {
   background: var(--primary);
   border-radius: 100px !important;
-  bottom: 15px;
+  bottom: 12px;
   box-shadow: var(--shadow) !important;
   color: var(--white);
   height: 35px;
-  position: fixed;
+  position: absolute;
   width: 35px;
   z-index: 20 !important;
 }
-.rli-noteListControls > div > div:nth-child(2):hover {
+div[height="50"] > div:nth-child(2):hover {
   background: transparent !important;
   box-shadow: none !important;
   width: auto;
 }
-.rli-noteListControls > div > div:nth-child(2)::before {
+div[height="50"] > div:nth-child(2)::before {
   content: "+";
   font-size: 28px;
   margin: auto;
 }
-.rli-noteListControls > div > div:nth-child(2):hover::before {
+div[height="50"] > div:nth-child(2):hover::before {
   content: "";
 }
-.rli-noteListControls > div > div:nth-child(2) button {
+div[height="50"] > div:nth-child(2) button {
   display: none;
 }
-.rli-noteListControls > div > div:nth-child(2):hover button {
+div[height="50"] > div:nth-child(2):hover button {
   border-radius: 100px !important;
   box-shadow: var(--shadow) !important;
   display: flex !important;
@@ -329,25 +331,8 @@ a[Title="Tags"] + div > span {
   min-width: 35px !important;
   transition: 0.3s;
 }
-.rli-noteListControls > div > div:nth-child(2) button span {
+div[height="50"] > div:nth-child(2) button span {
   color: var(--white) !important;
-}
-
-/**************************************************************************************************
- *  PLUGIN PANEL
- *************************************************************************************************/
-
-.rli-pluginColumn > div {
-  min-height: 100px !important;
-  padding: 0 10px !important;
-  width: auto !important;
-}
-/* do not show border after last element */
-.rli-pluginColumn > div > iframe {
-  border: none !important;
-}
-.rli-pluginColumn > div:not(:first-of-type) > iframe {
-  border-top: var(--default-border) !important;
 }
 
 /**************************************************************************************************
@@ -357,25 +342,28 @@ a[Title="Tags"] + div > span {
 /* editor column */
 .rli-editor > div {
   border-color: var(--overlay-dark1) !important;
+}
+.rli-editor > div > div {
+  /* padding: 0 !important; */
   padding: 5px 10px 0 10px !important;
   width: 100% !important;
 }
 
 /* empty notebook */
-.rli-editor > div:empty {
+.rli-editor > div > div:empty {
   background-color: var(--overlay-light1) !important;
 }
 
 /* note title bar */
-.rli-editor > div > div > div:first-of-type {
+.rli-editor > div > div > div > div:first-of-type {
   border-color: var(--overlay-dark1) !important;
   height: 45px !important;
   padding: 0 !important;
 }
-.rli-editor > div > div > div:first-of-type > input {
+.rli-editor > div > div > div > div:first-of-type > input {
   margin: 0 !important;
 }
-.rli-editor > div > div > div:first-of-type > .editor-toolbar {
+.rli-editor > div > div > div > div:first-of-type > .editor-toolbar {
   background: none !important;
   padding: 0 !important;
 }
@@ -390,12 +378,14 @@ a[title="Set alarm"] {
 .rli-editor
   > div
   > div
+  > div
   > div[style="padding-top: 10px; padding-bottom: 10px;"] {
   padding: 0 !important;
 }
 
 /* breadcrumbs (In:...) */
 .rli-editor
+  > div
   > div
   > div
   > div[style="padding-top: 10px; padding-bottom: 10px;"]
@@ -407,11 +397,13 @@ a[title="Set alarm"] {
 .rli-editor
   > div
   > div
+  > div
   > div[style="padding-top: 10px; padding-bottom: 10px;"]
   > button:hover {
   background-color: var(--overlay-dark1) !important;
 }
 .rli-editor
+  > div
   > div
   > div
   > div[style="padding-top: 10px; padding-bottom: 10px;"]
@@ -420,6 +412,7 @@ a[title="Set alarm"] {
   color: inherit;
 }
 .rli-editor
+  > div
   > div
   > div
   > div[style="padding-top: 10px; padding-bottom: 10px;"]
@@ -433,6 +426,7 @@ a[title="Set alarm"] {
   > div
   > div
   > div
+  > div
   > div[style="position: relative; display: flex; flex-direction: row;"]:first-of-type {
   bottom: 10px;
   left: 50%;
@@ -441,7 +435,7 @@ a[title="Set alarm"] {
   transform: translate(-50%);
   z-index: 20 !important;
 }
-.rli-editor > div > div > div > div > div > div.editor-toolbar {
+.rli-editor > div > div > div > div > div > div > div.editor-toolbar {
   border-radius: var(--dialog-radius);
   box-shadow: var(--shadow);
 }
@@ -452,11 +446,12 @@ button[title="Toggle editors"] {
 }
 
 /* content */
-.rli-editor > div > div > div[style="display: flex; flex: 1 1 0%;"] {
+.rli-editor > div > div > div > div[style="display: flex; flex: 1 1 0%;"] {
   border-top: var(--default-border) !important;
   border-bottom: var(--default-border) !important;
 }
 .rli-editor
+  > div
   > div
   > div
   > div[style="display: flex; flex: 1 1 0%;"]
@@ -466,12 +461,13 @@ button[title="Toggle editors"] {
 }
 
 /* editor layout splitter */
-.rli-editor > div > div > div > div > div > div:last-of-type {
+.rli-editor > div > div > div > div > div > div > div:last-of-type {
   border-color: var(--overlay-dark1) !important;
 }
 
 /* inline local search (right aligned within tag bar) */
 .rli-editor
+  > div
   > div
   > div
   > div[style$="align-items: center;"]:not(:empty):not(:first-of-type) {
@@ -486,11 +482,12 @@ button[title="Toggle editors"] {
 .rli-editor
   > div
   > div
+  > div
   > div[style$="align-items: center;"]:not(:empty):not(:first-of-type)
   > div {
   border: none !important;
 }
-.rli-editor > div > div > div:nth-last-child(2) > div div {
+.rli-editor > div > div > div > div:nth-last-child(2) > div div {
   /* set overflow behavior for info text */
   overflow: overlay;
 }
